Added more of Suchita's comments + formatting
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@462 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -82,8 +82,8 @@ First and foremost, to accomodate the urgent need of a basis set of simplified m
 this work has made many grounding assumptions, as stated in the introduction. Departures from these assumptions have not been fully explored.
 As a consequence, the list of models and implementations employed by the ATLAS and CMS collaborations 
 for early LHC Run-2 searches is not meant to exhaust the range of possibilities for mediating processes, 
-let alone cover all plausible mdoels of collider dark matter production. 
-Rather, it is hoped that others will continue the systematic exploration of the most generic possibilites 
+let alone cover all plausible models of collider dark matter production. 
+Rather, it is hoped that others will continue the systematic exploration of the most generic possibilities 
 for collider dark matter production, building upon the framework used in this report just as this report has 
 relied heavily on the work of many others. 
 This also applies to models that exist in literature but do not have an implementation yet: we
@@ -96,4 +96,4 @@ Furthermore, we see the need for broader discussion on the comparison
 of experimental results amongst collider and non-collider searches for particle dark matter. 
 This point will have to be addressed before the presentation of Run-2 results:
 The uncertainties in the comparisons between experiments should be discussed and conveyed, so that the different results
-can be placed in their correct context, and so we can collectively build a fair and comprehensive picture of our understanding of particle Dark Matter.
+can be placed in their correct context, and so we can collectively build a fair and comprehensive picture of our understanding of particle dark matter.
