Added more of Suchita's comments + formatting
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@463 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/tex/EFTValidity.tex
+++ b/PhysicsDarkUniverse/tex/EFTValidity.tex
@@ -2,7 +2,7 @@
 %\subsection*{EFT Validity and Truncation Summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Most of this report has focused on simplified models.
+Most of this report has focused on simplified models of dark matter.
 In this Chapter, we wish to emphasize the applicability of
 Effective Field Theories (EFTs) 
 in the interpretation of DM searches at the LHC.
@@ -50,7 +50,7 @@ the corresponding value of $g$ must increase to match the experimental
 limit on \Mstar.
 On the other hand, if, for the same value of \Mstar, a large $\Lambda$
 is assumed so that the full set of events fulfill the EFT validity condition,
-a larger value of g is required.  For large enough g, computations based on perturbation theory become unreliable.
+a larger value of $g$ is required.  For large enough $g$, computations based on perturbation theory become unreliable.
 
 In the first part of this Chapter, we summarize two methods that
 have been advocated to truncate events that 
@@ -173,7 +173,7 @@ a search is not simply a counting experiment and exploits the shapes of kinemati
 
 \subsubsection{Sample results of EFT truncation procedures}
 
-An example of the application of the two procedures to the limit on $M_*$ from Ref.~\cite{ATL-PHYS-PUB-2014-007} as a function of the product of the couplings is shown in Figure~\ref{Ecm<Mcut}. Only the region between the dashed and the solid line is excluded. It can be seen that the procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat}, shown in blue, is more conservative than the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr}.
+An example of the application of the two procedures to the limit on \Mstar from Ref.~\cite{ATL-PHYS-PUB-2014-007} as a function of the product of the couplings is shown in Figure~\ref{Ecm<Mcut}. Only the region between the dashed and the solid line is excluded. It can be seen that the procedure from~\cite{Racco:2015dxa} outlined in Section~\ref{sec:TruncationWithSHat}, shown in blue, is more conservative than the procedure from Refs.~\cite{Busoni:2014sya,Aad:2015zva}, described in Section~\ref{sec:TruncationWithQTr}.
 
 \begin{figure}
 	\centering
