--- a/PhysicsDarkUniverse/doc.tex
+++ b/PhysicsDarkUniverse/doc.tex
@@ -1,6 +1,7 @@
 \documentclass[review]{elsarticle}
 
 \usepackage{lineno,hyperref}
+%\usepackage{authblk}
 \modulolinenumbers[5]
 
 \journal{Physics of the Dark Universe}
