Latest changes by Suchita and Yangyang
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@465 4525493e-7705-40b1-a816-d608a930855b

--- a/PhysicsDarkUniverse/doc.bib
+++ b/PhysicsDarkUniverse/doc.bib
@@ -2608,12 +2608,20 @@
       SLACcitation   = "%%CITATION = ARXIV:1206.1599;%%",
 }
 
-@misc{HEPData,
-        key = {Durham HEPDATA Project},
+@misc{HEPData_doc,
+	key = {Durham HEPDATA Project},
 	title = "The {Durham} {HepData} Project",
 	howpublished = "\url{http://hepdata.cedar.ac.uk/abouthepdata}",
 	year = {2015}, 
 	note = "[Online; accessed 13-June-2015]"
+}
+
+@misc{HEPData,
+	key = {Durham HEPDATA Project},
+	title = "The {Durham} {HepData} Project, ATLAS/CMS Dark Matter Forum repository",
+	howpublished = "\url{http://hepdata.cedar.ac.uk/view/ins1381178}",
+	year = {2015}, 
+	note = "[Online; in preparation]"
 }
 
 @misc{PDF4LHC,
