--- a/PhysicsDarkUniverse/tex/EWSpecificModels_EFT.tex
+++ b/PhysicsDarkUniverse/tex/EWSpecificModels_EFT.tex
@@ -123,8 +123,8 @@ span a sufficient range leading to different kinematics,
 that is within the LHC sensitivity for early searches and that is consistent across 
 the various signatures and EFT operators. We therefore start the mass scan
 at \mdm=1~\gev, where collider experiments are complementary to direct and indirect detection
-and choose the last point corresponding to a DM mass of 1~\tev. 
-We recommend a scan in seven mass points, namely:
+and choose the last point corresponding to a DM mass of 1.3~\tev. 
+We recommend a scan in the following mass points:
 $$
 \mdm = { 1, 10, 50, 100, 200, 400, 800, 1300 } \gev. 	
 $$
