--- a/PhysicsDarkUniverse/tex/Presentation_Of_Experimental_Results.tex
+++ b/PhysicsDarkUniverse/tex/Presentation_Of_Experimental_Results.tex
@@ -12,7 +12,7 @@
   cross-section times efficiency times acceptance of new phenomena for all cases, but
   especially when EFTs are employed as benchmarks. This recommendation has been issued before: see
   Ref.~\cite{Kraml:2012sg} for detailed suggestions.
- \item Provide easily usable and clearly labeled results in a digitized format, e.g.~\cite{HEPData} entries, ROOT histograms and macros
+ \item Provide easily usable and clearly labeled results in a digitized format, e.g.~\cite{HEPData_doc} entries, ROOT histograms and macros
  or tables available on analysis public pages.
  \end{itemize}
 
@@ -56,7 +56,7 @@ Digitized kinematic distributions are often necessary for the validation of the 
 and so are tables containing the events passing each of the cuts. 
 
 The availability of digitized data and backgrounds is one of the primary requirements for fast and efficient recasting. 
-Platforms such as HepData~\cite{HEPData} can be used as a centralized repository; alternatively, analysis public pages and tables can be used
+Platforms such as HepData~\cite{HEPData_doc} can be used as a centralized repository; alternatively, analysis public pages and tables can be used
 for dissemination of results. Both data and Standard Model backgrounds should be provided in the form of binned histogram that can be interpolated if needed. 
 
 A detailed description of the likelihood used in order to derive the limits from the comparison of data to signal plus background should be given. 
